--- a/web/mysite/templates/login.html
+++ b/web/mysite/templates/login.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block body %}
+<center>
+    <form method="post" action="UserLogin/">
+        {% csrf_token %}
+        <h2>Login</h2>
+        <label>Enter Username</label>
+        <input type="text" name="username" required pattern="[a-zA-Z]+" title="only characters"><br><br>
+        <label>Enter Password</label>
+        <input type="password" name="password" required title="Enter password"><br><br>
 
-<form method="post" action="UserLogin/">
-    {% csrf_token %}
-    <label>Enter Usernamea</label>
-    <input type="text" name="username" required pattern="[a-zA-Z]+" title="only characters"><br><br>
-    <label>Enter Password</label>
-    <input type="password" name="password" required title="Enter password"><br><br>
- 
-    <input type="submit" value="submit" name="Login">
+        <input type="submit" value="submit" name="Login">
 
-</form>
+    </form>
+</center>
 
-</body>
-</html>
+{% endblock body %}
