--- a/web/mysite/templates/base.html
+++ b/web/mysite/templates/base.html
@@ -21,7 +21,7 @@
     .btn{
       text-decoration: none;
       color: black;
-      padding: 15px;
+      padding: 12px;
       margin-left: 10px;
       background-color: white;
       border: 2px solid white;
@@ -30,7 +30,7 @@
     }
     .btn:hover{
       background-color: rgb(110, 166, 218);
-      border: 2px solid teal;
+      border: 2px solid rgb(110, 166, 218);
     }
   </style>
   {% block style %}
