--- a/web/mysite/templates/base.html
+++ b/web/mysite/templates/base.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>{% block title %} | {% endblock title %}Softtech</title>
   <style>
     *{
       margin: 0px;
+      box-sizing: border-box;
     }
     .navbar{
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: rgb(203 204 233);
+      background-color: #3a3a4d;
       height: 100px;
     }
     .navigation{
