--- a/web/mysite/templates/userreg.html
+++ b/web/mysite/templates/userreg.html
@@ -1,85 +1,106 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}
+  Registration |
+{% endblock title %}
+{% block style %}
+<style>
+    .container{
+        margin: 25px 370px;
+        border: 2px solid black;
+        border-radius: 40px;
+    }
+    label {
+        font-size: 1.2rem;
+    }
+
+    input[type=text],
+    input[type=password],
+    select {
+        width: 45%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: inline-block;
+        border: none;
+        background: #f1f1f1;
+        font-size: 1rem;
+    }
+
+    input[type=text]:focus,
+    input[type=password]:focus {
+        background-color: #ddd;
+        outline: none;
+    }
+
+    .registerbtn {
+        background-color: #4CAF50;
+        color: white;
+        padding: 16px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 15%;
+        opacity: 0.9;
+        font-size: 1.1rem;
+    }
+
+    .registerbtn:hover {
+        opacity: 2;
+    }
+</style>
+
+{% endblock style %}
 {% block body %}
 <center>
-    <form method="post" action="UserRegistered/">
-        {% csrf_token %}
-        <h2>User Registration</h2><br><br>
-         <label>First Name:</label>
-        <input type="text" name="fname" id="first_name" required pattern="[a-zA-Z]+" title="contains only characters"/><br>
-          <label>Last Name:</label>
-    <input type="text" name="lname" id="last_name" required pattern="[a-zA-Z]+" title="contains only characters"/><br>
-          <label>Department:</label>
-      <select name="department" required>
-                                        <option value="cse">CSE</option>
-                                        <option value="mech">MECH</option>
-                                        <option value="auto">AUTO</option>
-                                        <option value="civil">CIVIL</option>
-                                        <option value="E&tc">E&TC</option>
-      </select><br>
-          <label>Division:</label>
-      <select name="division" required>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-      </select><br>
-          <label>Email:</label>
-    <input type="text" name="email" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" title="Email must be in gmail format example-> example@gmail.com"/><br>
-          <label>Mobile:</label>
-    <input type="text" name="mobile" id="mobile" required pattern="[0-9]+" title="contains only numbers"/>
-        <br>
-          <label>Username:</label>
-    <input type="text" name="username" id="username" required pattern="[a-zA-Z]+" title="contains only characters"/>
-        <br>
-          <label>password:</label>
-    <input type="text" name="password" id="password" required pattern="[a-zA-Z]+" title="contains only characters"/>
-    
-        <br>
-    
-     <input type="submit" value="Submit" class="submit" id="submit"  name="submit"/>
-    </form>
+    <div class="container">
+        <center>
+            <form method="post" action="UserRegistered/">
+                {% csrf_token %}
+                <h1>User Registration</h1><br><br>
+                <label>First Name:</label>
+                <input type="text" name="fname" id="first_name" required pattern="[a-zA-Z]+"
+                    title="contains only characters" /><br>
+                <label>Last Name:</label>
+                <input type="text" name="lname" id="last_name" required pattern="[a-zA-Z]+"
+                    title="contains only characters" /><br>
+                <label>Department:</label>
+                <select name="department" required>
+                    <option value="cse">CSE</option>
+                    <option value="mech">MECH</option>
+                    <option value="auto">AUTO</option>
+                    <option value="civil">CIVIL</option>
+                    <option value="E&tc">E&TC</option>
+                </select><br>
+                <label>Division:</label>
+                <select name="division" required>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select><br>
+                <label>Email:</label>
+                <input type="text" name="email" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+                    title="Email must be in gmail format example-> example@gmail.com" /><br>
+                <label>Mobile:</label>
+                <input type="text" name="mobile" id="mobile" required pattern="[0-9]+" title="contains only numbers" />
+                <br>
+                <label>Username:</label>
+                <input type="text" name="username" id="username" required pattern="[a-zA-Z]+"
+                    title="contains only characters" />
+                <br>
+                <label>Password:</label>
+                <input type="text" name="password" id="password" required pattern="[a-zA-Z]+"
+                    title="contains only characters" />
+
+                <br>
+
+                <input class="registerbtn" type="submit" value="Submit" class="submit" id="submit" name="submit" />
+            </form>
         </center>
+    </div>
+
+</center>
+
 {% endblock body %}
-<center>
-<form method="post" action="UserRegistered/">
-    {% csrf_token %}
-    <h2>User Registration</h2><br><br>
-     <label>First Name:</label>
-    <input type="text" name="fname" id="first_name" required pattern="[a-zA-Z]+" title="contains only characters"/><br>
-      <label>Last Name:</label>
-<input type="text" name="lname" id="last_name" required pattern="[a-zA-Z]+" title="contains only characters"/><br>
-      <label>Department:</label>
-  <select name="department" required>
-                                    <option value="cse">CSE</option>
-                                    <option value="mech">MECH</option>
-                                    <option value="auto">AUTO</option>
-                                    <option value="civil">CIVIL</option>
-                                    <option value="E&tc">E&TC</option>
-  </select><br>
-      <label>Division:</label>
-  <select name="division" required>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-  </select><br>
-      <label>Email:</label>
-<input type="text" name="email" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" title="Email must be in gmail format example-> example@gmail.com"/><br>
-      <label>Mobile:</label>
-<input type="text" name="mobile" id="mobile" required pattern="[0-9]+" title="contains only numbers"/>
-    <br>
-      <label>Username:</label>
-<input type="text" name="username" id="username" required pattern="[a-zA-Z]+" title="contains only characters"/>
-    <br>
-      <label>password:</label>
-<input type="text" name="password" id="password" required pattern="[a-zA-Z]+" title="contains only characters"/>
-
-    <br>
-
- <input type="submit" value="Submit" class="submit" id="submit"  name="submit"/>
-</form>
-    </center>
