--- a/web/mysite/templates/login.html
+++ b/web/mysite/templates/login.html
@@ -1,17 +1,75 @@
 {% extends 'base.html' %}
+
+{% block title %}
+Login |
+{% endblock title %}
+{% block style %}
+<style>
+    .container {
+        margin: 25px 475px;
+        border: 2px solid black;
+        border-radius: 40px;
+    }
+
+    label {
+        font-size: 1.2rem;
+    }
+
+    input[type=text],
+    input[type=password],
+    select {
+        width: 45%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: inline-block;
+        border: none;
+        background: #f1f1f1;
+        font-size: 1rem;
+    }
+
+    input[type=text]:focus,
+    input[type=password]:focus {
+        background-color: #ddd;
+        outline: none;
+    }
+
+    .registerbtn {
+        background-color: #4CAF50;
+        color: white;
+        padding: 16px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 15%;
+        opacity: 0.9;
+        font-size: 1.1rem;
+    }
+
+    .registerbtn:hover {
+        opacity: 2;
+    }
+</style>
+
+{% endblock style %}
+
 {% block body %}
 <center>
-    <form method="post" action="UserLogin/">
-        {% csrf_token %}
-        <h2>Login</h2>
-        <label>Enter Username</label>
-        <input type="text" name="username" required pattern="[a-zA-Z]+" title="only characters"><br><br>
-        <label>Enter Password</label>
-        <input type="password" name="password" required title="Enter password"><br><br>
+    <div class="container">
+        <center>
+            <form method="post" action="UserLogin/">
+                {% csrf_token %}
+                <h1>Login</h1>
+                <label>Username:</label>
+                <input type="text" name="username" required pattern="[a-zA-Z]+" title="only characters"><br><br>
+                <label>Password:</label>
+                <input type="password" name="password" required title="Enter password"><br><br>
 
-        <input type="submit" value="submit" name="Login">
+                <input class="registerbtn" type="submit" value="submit" name="Login">
 
-    </form>
+            </form>
+        </center>
+    </div>
 </center>
+
 
 {% endblock body %}
